--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>net.tanesha.recaptcha4j</groupId>
+			<artifactId>recaptcha4j</artifactId>
+			<version>0.0.7</version>
+		</dependency>
 		<!-- Parse4j -->
 		<dependency>
 			<groupId>com.github.thiagolocatelli</groupId>
